# percival_architecture_patterns

./: .gitignore  LICENSE  README.md  pyproject.toml
percival_architecture_patterns/: main.py
percival_architecture_patterns/adapters/repositories/: in_memory.py  protocols.py  repo_params.py
percival_architecture_patterns/adapters/repositories/mongo/: mongo_repository.py
percival_architecture_patterns/domain/: exceptions.py  models.py  utils.py
percival_architecture_patterns/entrypoints/http/: allocate.py  batch.py  order.py
percival_architecture_patterns/service_layer/: batch.py  order.py
tests/unit/: test_batches.py  test_utils.py
tests/unit/service_layer/: test_batch_service_layer.py  test_order_service_layer.py
