[tool.poetry]
name = "percival-architecture-patterns"
version = "0.1.0"
description = ""
authors = ["bpbirch <brendanpbirch@gmail.com>"]
readme = "README.md"
packages = [{include = "percival_architecture_patterns"}]

[tool.taskipy.tasks]
uvicorn = { cmd = "cd ./percival_architecture_patterns && python -m uvicorn main:app --reload", help = "Run code quality tests" }
format = { cmd = "black percival_architecture_patterns tests", help = "Run black code formatting" }

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
dependency-injector = "^4.41.0"
pymongo = {extras = ["srv"], version = "^4.3.3"}
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
taskipy = "^1.10.4"
pydantic = "^1.10.7"
mongo = "^0.2.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
